--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 <body>
     <header> Discover hidden places in the world around you</header>
     <p class="comingsoon"> Download Excursion (Coming soon!)</p>  
-    <video autoplay>
+    <video autoplay muted loop>
   <source src="resources/video/excursion.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
     
 <h1> Your personal travel guide</h1>
 <h2 id="remembers"> Excursion remembers places you like, and recommends new points of interest around you.</h2>
-<img src="resources/images/camp.jpg" alt="camp at night">    
-  
+<p><img src="resources/images%20/camp.jpg"></p>
+ <p><img src="resources/images%20/phone.png"></p>
 <h1> Coming Soon for iPhone and Android</h1> 
 <p class="comingsoon">Download Excursion (Coming soon!)</p>    
 
